--- a/analysis/scrapingdata.Rmd
+++ b/analysis/scrapingdata.Rmd
@@ -31,7 +31,14 @@ library(tidyverse)
 library(apstyle)
 library(readxl)
 library(dplyr)  
-
+library(lubridate)
+library(janitor)
+library(tidygeocoder)
+library(sf)
+library(tigris)
+library(crsuggest)
+library(ggplot2)
+library(leaflet)
 ```
 
 ## Overview
@@ -39,47 +46,88 @@ library(dplyr)
 ```{r}
 #load data
 excel_files <- list.files(path = "~/Documents/campuscrimeproject/data", pattern = "\\.xlsx$", full.names = TRUE)
-unccrime <- purrr::map_dfr(excel_files, read_excel)
-
-#clean data
-#look at lubridate
-cleanunccrime <- unccrime  %>% 
+unccrime <- purrr::map_dfr(excel_files, read_excel) %>%
   separate('Event Date', into = c("Event Start Date", "Event End Date"), sep = " - ", convert = TRUE) %>%
-  separate('Event Start Date', into = c("Event Start Date", "Event Start Time"), sep = " ", convert = TRUE) %>%
-  separate('Event End Date', into = c("Event End Date", "Event End Time"), sep = " ", convert = TRUE) %>%
-  separate('Date Reported', into = c("Date Reported", "Time Reported"), sep = " ", convert = TRUE) %>%
-  separate('Event Start Date', into = c("Event Start Month", "Event Start Date", "Event Start Year"), sep = "/", convert = TRUE) %>%
- separate('Event End Date', into = c("Event End Month", "Event End Date", "Event End Year"), sep = "/", convert = TRUE) %>%
- separate('Date Reported', into = c("Month Reported", "Date Reported", "Year Reported"), sep = "/", convert = TRUE)
+  clean_names()
+
+#look at lubridate
+
 ```
 
 
 Q1: How have the number of crimes in the past year changed?
 ```{r}
 #may 2023 vs may 2022
-may2022 <- cleanunccrime %>%
-  filter(`Event Start Year` == 2022, `Event Start Month` == 5) %>%
-  group_by(`Event Start Month`, `Event Start Date`) %>%
-  summarize(number_of_crimes = n())
 
-plot2022 <- ggplot(may2022, aes(x = `Event Start Date`, y = number_of_crimes)) +
-  geom_line()
-plot2022
+may2022 <- unccrime %>%
+  mutate(event_start_date = as.Date(event_start_date)) %>%
+  filter(year(event_start_date) == 2022, month(event_start_date) == 5) %>%
+  group_by(event_start_date) %>%
+  summarize(number_of_crimes = n()) %>%
+  mutate(event_start_date = format(event_start_date, "%m-%d")) %>%
+  clean_names()
+
+may2023 <- unccrime %>%
+  mutate(event_start_date = as.Date(event_start_date)) %>%
+  filter(year(event_start_date) == 2023, month(event_start_date) == 5) %>%
+  group_by(event_start_date) %>%
+  summarize(number_of_crimes = n()) %>%
+  mutate(event_start_date = format(event_start_date, "%m-%d")) %>%
+  clean_names()
+
+maycrime <- ggplot() +
+  geom_line(data = may2022, aes(x = event_start_date, y = number_of_crimes, color = "blue")) +
+  geom_line(data = may2023, aes(x = event_start_date, y = number_of_crimes, color = "green")) +
+  labs(x = "Date", y = "# of Crimes", title = "Chapel Hill May Crime Trends") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  scale_color_manual(values = c("blue", "green"), labels = c("2022", "2023")) +
+  theme_ap(family = "")
+maycrime
+
 ```
 
-Q2: What is the overall trend of accidents in Chapel Hill over the past year, and are there any particular locations or intersections that have consistently recorded a higher number of accidents?
+Q2: Have there been more accidents on Franklin Street over the past year?
 ```{r}
-#franklin vs columbia/other main unc streets
-ch_accidents22 <- cleanunccrime %>%
-  filter(`Event Start Year` == 2022, Type == "Accident")
+#are there more accidents on a certain part of franklin st
+franklin_accidents <- unccrime %>%
+  filter(year(event_start_date) == 2023, month(event_start_date) == 5, str_detect(location, fixed("franklin", ignore_case = TRUE)))
 
-ch_accidents23 <- cleanunccrime %>%
-  filter(`Event Start Year` == 2023, Type == "Accident")
+franklingeocode <- franklin_accidents %>%
+  geocode(location, method = 'arcgis', lat = latitude , long = longitude, full_results = TRUE)
+
+franklin_accidents22 <- unccrime %>%
+  filter(year(event_start_date) == 2022, month(event_start_date) == 5, str_detect(location, fixed("franklin", ignore_case = TRUE)))
+
+franklingeocode22 <- franklin_accidents22 %>%
+  geocode(location, method = 'arcgis', lat = latitude , long = longitude, full_results = TRUE)
+
+leaflet() %>%
+    addTiles() %>%
+    setView(lng = -79.0561, lat = 35.9111, zoom = 15) %>%
+    addCircleMarkers(data = franklingeocode, color = "blue") %>%
+    addCircleMarkers(data = franklingeocode22, color = "green")
+
 ```
 
-Q3:How promptly are the Chapel Hill Police Department officers responding to accident reports, as shown by the time difference between the event and reporting dates?
+Q3: Is there a gap between the end of each incident and the report date for any of these cases?
 ```{r}
-#gap bw end of incident and report date
+gap_in_data <- unccrime %>%
+  mutate(gap_days = as.numeric(difftime(date_reported, event_end_date, units = "days")),
+         gap_in_data = gap_days > 0) %>%
+  select(event_end_date, date_reported, gap_in_data)
+
+cases_with_gaps <- gap_in_data %>%
+  filter(gap_in_data == TRUE)
+
+num_cases_with_gaps <- nrow(cases_with_gaps)
+num_cases_with_gaps
+
+#calculate average time between event end date and date reported
+time_diff <- unccrime %>%
+  mutate(time_between = as.numeric(difftime(date_reported, event_end_date, units = "days"))) %>%
+  pull(time_between)
+average_time <- mean(time_diff, na.rm = TRUE)
+average_time
 
 ```
 
